clusters/colima/local-ui/localhost-tls.yaml
---
# Local HTTPS certificate via mkcert (trusted local CA)
# The certificate secret is provisioned by: kubectl create secret tls localhost-mkcert --cert=... --key=... -n istio-system
# This secret is referenced by the Istio Gateway resource for HTTPS termination.
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: local-ui-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: localhost-mkcert
    hosts:
    - "argocd.localhost"
    - "grafana.localhost"
    - "prometheus.localhost"
    - "rollouts-demo-canary.localhost"
    - "rollouts-demo-blue-green.localhost"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argocd.localhost"
    - "grafana.localhost"
    - "prometheus.localhost"
    - "rollouts-demo-canary.localhost"
    - "rollouts-demo-blue-green.localhost"
